test/files/invalid/invalid_array_default.stderr
[0m[1m[38;5;9merror[0m[1m: Unsupported type[0m
  [0m[34m┌─[0m test/files/invalid/invalid_array_default.fbs:2:6
  [0m[34m│[0m
[0m[34m2[0m [0m[34m│[0m   x: [0m[31m[uint8: 3][0m = [0, 1, 2, 3];
  [0m[34m│[0m      [0m[31m^^^^^^^^^^[0m [0m[31mArrays in tables are not supported[0m

[0m[1m[38;5;9merror[0m[1m: Array literal does not have the correct length[0m
  [0m[34m┌─[0m test/files/invalid/invalid_array_default.fbs:2:19
  [0m[34m│[0m
[0m[34m2[0m [0m[34m│[0m   x: [uint8: 3] = [0m[31m[0, 1, 2, 3][0m;
  [0m[34m│[0m                   [0m[31m^^^^^^^^^^^^[0m

Error: Bailing because of errors
